--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "@uniswap/default-token-list",
+  "name": "oasis-default-token-list",
   "version": "2.0.0",
-  "description": "◦ The Uniswap default token list",
+  "description": "◦ The Oasis Uniswap Default token list",
   "main": "build/uniswap-default.tokenlist.json",
   "scripts": {
     "test": "mocha",
-    "build": "rimraf build && mkdir -p build && node src/write.js > build/uniswap-default.tokenlist.json",
-    "prepublishOnly": "npm test && npm run build"
+    "build": "rimraf build && mkdir build && node src/write.js > build/uniswap-default.tokenlist.json",
+    "prepublishOnly": "npm test && npm run build",
+    "start": "node server.js"
   },
   "files": [
     "build/uniswap-default.tokenlist.json"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Uniswap/default-token-list.git"
+    "url": "git+https://github.com/dltswap/default-token-list.git"
   },
   "keywords": [
     "uniswap",
@@ -24,9 +25,9 @@
   "author": "Moody Salem",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/Uniswap/default-token-list/issues"
+    "url": "https://github.com/dltswap/default-token-list/issues"
   },
-  "homepage": "https://github.com/Uniswap/default-token-list#readme",
+  "homepage": "https://github.com/dltswap/default-token-list#readme",
   "devDependencies": {
     "@ethersproject/address": "^5.0.2",
     "@uniswap/token-lists": "^1.0.0-beta.8",
