--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oasis-default-token-list",
-  "version": "2.0.3",
-  "description": "◦ The Oasis Uniswap Default token list",
+  "version": "2.1.0",
+  "description": "◦ The dltswap Default token list",
   "main": "build/uniswap-default.tokenlist.json",
   "scripts": {
     "test": "mocha",
